// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be able to incrementally get maps in range 1`] = `
Array [
  "MapWorldsDunes",
  "MapWorldsDunesUnique",
  "MapWorldsFields",
  "MapWorldsOrchard",
  "MapWorldsTropicalIsland",
]
`;

exports[`should be able to incrementally get maps in range 2`] = `
Array [
  "MapWorldsChateau",
  "MapWorldsCitySquare",
  "MapWorldsDunes",
  "MapWorldsDunesUnique",
  "MapWorldsEstuary",
  "MapWorldsFields",
  "MapWorldsInfestedValley",
  "MapWorldsLair",
  "MapWorldsOrchard",
  "MapWorldsPier",
  "MapWorldsSpiderForest",
  "MapWorldsTropicalIsland",
  "MapWorldsWastePool",
]
`;
